--- a/app/index.css
+++ b/app/index.css
@@ -69,13 +69,14 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 2rem;
 }
 
 .content {
   font-family: titillium;
   font-size: 1.25rem;
   text-align: center;
-  padding: 0.5rem 1.25rem;
+  padding: 0.5rem;
 }
 
 .button-section {
@@ -101,7 +102,7 @@ h1 {
 
 @media only screen and (max-width: 768px) {
   .topnav {
-    height: 3rem;
+    height: 4rem;
   }
 
   .content {
